Images and Styling

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
         </header>
 
         <div class="artworkLeftContainer">
+            <img src="./imgs/artwork01.png" class="artworkImage horizontal" alt="">
             <a class="link" href="#">artwork / prints</a>
         </div>
 
         <div class="commercialRightContainer">
+            <img src="./imgs/commercial01.png" class="commercialImage vertical" alt="">
             <a class="link" href="#">commercial / portfolio</a>
         </div>
         
