New Images & Slideshow
Add new images,
Create slideshow every 50px,
Create canvas draw line first 50px

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </header>
 
         <div class="artworkLeftContainer">
+            <canvas id="artworkCanvas"></canvas>
             <img src="./imgs/artwork01.png" class="artworkImage horizontal" alt="">
             <a class="link" href="#">artwork / prints</a>
         </div>
@@ -32,6 +33,6 @@
         </div>
         
         
-        <script src="" async defer></script>
+        <script src="./js/slideOnMoveArtwork.js" async defer></script>
     </body>
 </html>
