--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         </div>
 
         <div class="commercialRightContainer">
+                <canvas id="commercialCanvas"></canvas>
             <img src="./imgs/commercial01.png" class="commercialImage vertical" alt="">
             <a class="link" href="#">commercial / portfolio</a>
         </div>
         
-        
+        <!-- <script src="./js//drawArtwork.js" async defer></script> -->
         <script src="./js/slideOnMoveArtwork.js" async defer></script>
+        <script src="./js/slideOnMoveCommercial.js" async defer></script>
     </body>
 </html>
