Animate change dimension slideshow Artwork

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
         
         <!-- <script src="./js//drawArtwork.js" async defer></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
         <script src="./js/slideOnMoveArtwork.js" async defer></script>
         <script src="./js/slideOnMoveCommercial.js" async defer></script>
     </body>
