--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 
         <div class="artworkLeftContainer">
             <canvas id="artworkCanvas"></canvas>
+            <div class="artworkBackgroundImage horizontal"></div>
             <img src="./imgs/artwork01.png" class="artworkImage horizontal" alt="">
-            <a class="link" href="#">artwork / prints</a>
+            <a class="link" href="artwork-prints.html">artwork / prints</a>
         </div>
 
         <div class="commercialRightContainer">
-                <canvas id="commercialCanvas"></canvas>
+            <canvas id="commercialCanvas"></canvas>
+            <!-- <div class="commercialBackgroundImage vertical"></div> -->
             <img src="./imgs/commercial01.png" class="commercialImage vertical" alt="">
             <a class="link" href="#">commercial / portfolio</a>
         </div>
