--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="artworkLeftContainer">
             <canvas id="artworkCanvas"></canvas>
-            <div class="artworkBackgroundImage horizontal"></div>
+            <!-- <div class="artworkBackgroundImage horizontal"></div> -->
             <img src="./imgs/artwork01.png" class="artworkImage horizontal" alt="">
             <a class="link" href="artwork-prints.html">artwork / prints</a>
         </div>
